--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   deploy:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: eamonwoortman/alpine-python-curl-zip
         auth:
           username: $USERNAME
           password: $PASSWORD
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update docker openrc
-            apt install curl
+            # apk add --update docker openrc
+            # apt install curl
             curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-400.0.0-linux-x86_64.tar.gz
             tar -xf google-cloud-cli-400.0.0-linux-x86.tar.gz
             ./google-cloud-sdk/install.sh
