--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             # apt install curl
             curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-400.0.0-linux-x86_64.tar.gz
             # tar -xf google-cloud-cli-400.0.0-linux-x86.tar.gz
-            ./google-cloud-sdk/install.sh
+            # ./google-cloud-sdk/install.sh
             ./google-cloud-sdk/bin/gcloud init
 
 
