--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # apk add --update docker openrc
+            apk add --update docker openrc
             # apt install curl
             curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-400.0.0-linux-x86_64.tar.gz
             # tar -xf google-cloud-cli-400.0.0-linux-x86.tar.gz
