--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,10 +70,10 @@ jobs:
       #     command: |
       #       docker run -d -it -p  8080:8080 --name reskillform reskillform-image
 
-#       - run:
-#           name: Tag image
-#           command: |
-#             docker tag devops:latest public.ecr.aws/l3u0n7j8/devops:latest
+      - run:
+          name: Tag image
+          command: |
+            docker tag mollyladson/reskillform
 
       - run:
           name: Push image
