--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,12 @@ jobs:
       #       docker run -d -it -p  8080:8080 --name reskillform reskillform-image
 
       - run:
+          name: Login
+          command: |
+            docker login
+
+
+      - run:
           name: Tag image
           command: |
             docker tag reskillform mollyladson/reskillform
